# nenos-acad-ai-taxi

./: README.md  pyproject.toml
src/: config.py  init_dbs.py  taxi-order.py  taxi_car.py  taxi_client.py
src/api/: main.py
src/api/routers/: status.py  taxi_client.py
src/common/data_transfer_objects/: api_status.py  order.py  taxi_car.py  taxi_client.py
src/db/: connection.py  init_db.py
src/db/models/: __init__.py  base.py  order.py  taxi_car.py  taxi_client.py
src/db/queries/: taxi_client.py
src/web/: main.py
src/web/callbacks/: __init__.py  add_client.py  api_status.py
src/web/components/: add_client.py  api_status.py  base.py  header.py  loading.py
