[tool.poetry]
name = "pythonprojnenos"
version = "0.1.0"
description = ""
authors = ["Huzum Eduard <galied25@yahoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.9.2"
pytest = "^8.3.3"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
